--- a/src/components/core/interactivemultioption/rsrc/templates/activityedit.hbs
+++ b/src/components/core/interactivemultioption/rsrc/templates/activityedit.hbs
@@ -1,7 +1,7 @@
 <textarea name="" id="activitydescription">{{description}}</textarea>
 <div id="listquestions">
 	{{#each questions}}
-		<div data-pemidentifier="{{this.answer}}"><input type="checkbox" name="question" value="" {{this.checked}}><textarea>{{this.text}}</textarea><button type="button" onclick="deleteQuestion(this)">{{gettext "Delete"}}</button></div>
+		<div data-pemidentifier="{{this.answer}}"><input type="checkbox" name="question" value="" {{this.checked}}><span class="checkbox"></span><textarea>{{this.text}}</textarea><button type="button" onclick="deleteQuestion(this)">{{gettext "Delete"}}</button></div>
 	{{/each}}
 </div>
 <div><button id="addquestion" type="button">{{gettext "Add question"}}</button></div>
