--- a/src/templates/updateSectionName.hbs
+++ b/src/templates/updateSectionName.hbs
@@ -4,7 +4,9 @@
 	<span id="inputSuccess2Status" class="sr-only">(success)</span>
 
     <p>
-   	<button type="button">{{gettext "Save"}}</button>
+    <footer>
+   		<button type="button">{{gettext "Save"}}</button>
+    </footer>
     </p>
 </div>
 
