--- a/src/themes/editor/default/css/99-main.css
+++ b/src/themes/editor/default/css/99-main.css
@@ -68,7 +68,8 @@ body{
 
 
 #navsections ul{
-    
+    margin-left: 0px;
+    padding-left: 10px;
 }
 
 #navsections > ul{
@@ -500,4 +501,28 @@ body{
 
 .cbdialog #listquestions {
     vertical-align: middle;
+}
+
+
+.cbdialog #listquestions textarea{
+    width: 60%;
+}
+
+
+.cbdialog footer{
+    text-align: right;
+}
+
+.cbdialog #activitydescription{
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.cbdialog #description{
+    width: 100%;
+    margin-bottom: 15px;
+}
+
+.cbdialog #url{
+    width: 70%;
 }
