--- a/src/templates/initialwizard.importprojects.hbs
+++ b/src/templates/initialwizard.importprojects.hbs
@@ -8,6 +8,7 @@
 	<div class="btn-group" role="group" id="importbuttonactions">
 		<button id="importhtml5" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "HTML5"}}</button>
 		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "SCORM"}}</button>
+		<button id="importims" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "IMS"}}</button>
 	</div>
 </div>
 <button id="wzrdgoback">{{gettext "Cancel"}}</button>
