--- a/src/templates/initialwizard.importprojects.hbs
+++ b/src/templates/initialwizard.importprojects.hbs
@@ -9,6 +9,7 @@
 		<button id="importhtml5" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "HTML5"}}</button>
 		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "SCORM"}}</button>
 		<button id="importims" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "IMS"}}</button>
+		<button id="importepub" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "EPUB"}}</button>
 	</div>
 </div>
 <button id="wzrdgoback">{{gettext "Cancel"}}</button>
