Epub export feature

--- a/src/themes/editor/default/css/99-main.css
+++ b/src/themes/editor/default/css/99-main.css
@@ -220,6 +220,9 @@ body{
     display:none;
  }
 
+.exportepubwizard .ui-dialog-titlebar-close{
+    display:none;
+ }
 
 .ui-rotatable-handle {
     height: 16px;
