fix bug with toolbar position

--- a/src/components/core/text/toolbar.hbs
+++ b/src/components/core/text/toolbar.hbs
@@ -8,9 +8,13 @@
       <div class="btn-group">
         <a class="btn dropdown-toggle" data-toggle="dropdown" title="Font Size"><i class="fa fa-text-height"></i>&nbsp;<b class="caret"></b></a>
           <ul class="dropdown-menu">
-          <li><a data-edit="fontSize 5"><font size="5">{{gettext "Huge"}}</font></a></li>
-          <li><a data-edit="fontSize 3"><font size="3">{{gettext "Normal"}}</font></a></li>
-          <li><a data-edit="fontSize 1"><font size="1">{{gettext "Small"}}</font></a></li>
+          <li><a data-edit="fontSize 7"><font size="3">{{gettext "7"}}</font></a></li>
+          <li><a data-edit="fontSize 6"><font size="3">{{gettext "6"}}</font></a></li>
+          <li><a data-edit="fontSize 5"><font size="3">{{gettext "5"}}</font></a></li>
+          <li><a data-edit="fontSize 4"><font size="3">{{gettext "4"}}</font></a></li>
+          <li><a data-edit="fontSize 3"><font size="3">{{gettext "3"}}</font></a></li>
+          <li><a data-edit="fontSize 2"><font size="3">{{gettext "2"}}</font></a></li>
+          <li><a data-edit="fontSize 1"><font size="3">{{gettext "1"}}</font></a></li>
           </ul>
       </div>
       <div class="btn-group">
@@ -63,15 +67,5 @@
             <button id="tablemenuButton" class="btn" type="button">{{gettext "Add"}}</button>
           </div>
       </div>
-      <div class="btn-group">
-  		  <a class="btn dropdown-toggle" data-toggle="dropdown" title="Hyperlink"><i class="fa fa-link"></i></a>
-  		    <div class="dropdown-menu input-append">
-  			    <input class="span2" placeholder="URL" type="text" data-edit="createLink"/>
-  			    <button class="btn" type="button">{{gettext "Add"}}</button>
-          </div>
-          <a class="btn" data-edit="unlink" title="Remove Hyperlink"><i class="fa fa-cut"></i></a>
-
-      </div>
-      
 </div>
 </div>
