Changes in EPUB Export Feature

--- a/src/templates/exportEpubProject.wizard.hbs
+++ b/src/templates/exportEpubProject.wizard.hbs
@@ -27,4 +27,5 @@
 </div>
 <p><p>
 <div class="waitingOK" style="display:none"><font color="#FC0202"><strong>{{gettext "EPUB Generation in progress. Please wait a moment..."}}</strong></font></div>
+<div class="waitingFiles" style="display:none"><font color="#FC0202"><strong>{{gettext "EPUB Generation in progress. Copying interactive files..."}}</strong></font></div>
 <div class="waitingER" style="display:none"><font color="#FC0202"><strong>{{gettext "There was an error generating EPUB file. Please cancel the process"}}</strong></font></div>
