--- a/src/components/core/fillinthegaps/rsrc/templates/activityedit.hbs
+++ b/src/components/core/fillinthegaps/rsrc/templates/activityedit.hbs
@@ -1,3 +1,4 @@
 <textarea id="description">{{description}}</textarea>
+{{gettext "Group:"}}<input id='group' type='number' min='1' max='10' value='{{group}}'/>
 {{{toolbar}}}
 <div id="activitytext">{{{activitytext}}}</div>
