WIP Export Scorm

--- a/src/templates/imsmanifest.hbs
+++ b/src/templates/imsmanifest.hbs
@@ -35,6 +35,9 @@
 				{{#each items}}
 					{{> scormitem}}
 				{{/each}}
+        <imsss:sequencing>
+          <imsss:controlMode choice="true" choiceExit="true" flow="true" forwardOnly="false"/>
+        </imsss:sequencing>
     	</organization>
 	</organizations>	
 
