--- a/src/templates/exportEpubProject.wizard.hbs
+++ b/src/templates/exportEpubProject.wizard.hbs
@@ -40,8 +40,8 @@
 </div>
 <p><p>
 <div> 
-<button id="exportepubback">{{gettext "Cancel"}}</button>
-<button id="exportepubbtn" disabled="disabled">{{gettext "Generate EPUB"}}</button>
+<button id="exportepubback" class="btn" >{{gettext "Cancel"}}</button>
+<button id="exportepubbtn" class="btn" disabled="disabled">{{gettext "Generate EPUB"}}</button>
 </div>
 <p><p>
 <div class="waitingOK" style="display:none"><font color="#FC0202"><strong>{{gettext "EPUB Generation in progress. Please wait a moment..."}}</strong></font></div>
