--- a/src/templates/itemscorm.hbs
+++ b/src/templates/itemscorm.hbs
@@ -2,7 +2,7 @@
 	<item identifier="{{@key}}" isvisible="true">
 		<title>{{title}}</title>
 		<item identifier="{{sections.code}}" isvisible="true" identifierref="{{resourcecode}}">
-			<title>>&lt;-</title>
+			<title>&lt;-</title>
 		</item>
 		{{#each sections.items}}
 		{{> scormitem}}
