--- a/src/templates/resourcescorm.hbs
+++ b/src/templates/resourcescorm.hbs
@@ -5,7 +5,7 @@
 		<file href="{{this}}"/>
 		{{/each}}
       	{{#each depends}}
-		<file href="{{this}}"/>
+		<dependency identifierref="{{this}}"/>
 		{{/each}}
 
  	</resource>
