Add uniqueid to organization

--- a/src/templates/imsmanifest.hbs
+++ b/src/templates/imsmanifest.hbs
@@ -29,8 +29,8 @@
 	</metadata>
 
 
-	<organizations default="1000">
-    	<organization identifier="1000"  structure="hierarchical">
+	<organizations default="{{OrganizationID}}">
+    	<organization identifier="{{OrganizationID}}"  structure="hierarchical">
       		<title>{{Title_Proyect}}</title>
 				{{#each items}}
 					{{> scormitem}}
