--- a/src/templates/initialwizard.importprojects.hbs
+++ b/src/templates/initialwizard.importprojects.hbs
@@ -7,7 +7,7 @@
 <div class="btn-toolbar" role="toolbar">
 	<div class="btn-group" role="group" id="importbuttonactions">
 		<button id="importhtml5" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "HTML5"}}</button>
-		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "SCORM"}}</button>
+		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "SCORM2004"}}</button>
 		<button id="importims" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "IMS"}}</button>
 		<button id="importepub" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "EPUB"}}</button>
 		<button id="importelp" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "eXe Learning"}}</button>
