--- a/src/templates/initialwizard.importprojects.hbs
+++ b/src/templates/initialwizard.importprojects.hbs
@@ -10,7 +10,7 @@
 		<button id="importscorm" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "SCORM2004"}}</button>
 		<button id="importims" class="btn btn-primary" type="button" style="display:inline-block" disabled="disabled">{{gettext "IMS"}}</button>
 		<button id="importepub" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "EPUB"}}</button>
-		<button id="importelp" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "eXe Learning"}}</button>
+		<!--<button id="importelp" class="btn btn-default" type="button" style="display:inline-block" disabled="disabled">{{gettext "eXe Learning"}}</button>-->
 	</div>
 </div>
 <button id="wzrdgoback">{{gettext "Cancel"}}</button>
